--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 
+
 *{
     margin: 0;
     padding: 0;
@@ -21,6 +22,7 @@ body {
 .header {
     width: 100%;
     height: 100vh;
+    background-image: url("images/forest.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -55,9 +57,9 @@ nav {
 
 #myVideo {
   position: relative;
+  top: -800px;
   right: 0;
   bottom: 0;
-  top: -800px;
   width: fit-content;
   height: 100%;
   z-index: -1;
@@ -186,18 +188,15 @@ a span::before
 
 
 
-
-
-
-
 .section {
     width: 100%;
 
     background-size: cover;
     background-position: center;
 }
-#about {
-    background-image: url("images/den.jpg");
+
+.about{
+  margin-left: 10%;
 }
 
 .about .row{
@@ -654,3 +653,4 @@ ul {
     }
 
 }
+
