--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 
-
 *{
     margin: 0;
     padding: 0;
@@ -33,7 +32,7 @@ body {
     font-size: 2.5rem;
 }
 .container {
-    padding: 5px 3%;
+    padding: 5px;
 
 }
 nav {
@@ -56,7 +55,7 @@ nav {
 
 #myVideo {
   position: relative;
-  top: -800px;
+  top: -700px;
   right: 0;
   bottom: 0;
   width: fit-content;
@@ -116,8 +115,12 @@ nav ul li a:hover::after {
     /* top: 240px; */
 }
 .header-text {
-    margin-top: 20%;
+    margin-top: 10%;
     font-size: 30px;
+    /* margin-left: 5%; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .header-text h1 {
     font-size: 60px;
@@ -155,7 +158,7 @@ a i:nth-child(2)
 .header-text a i:nth-child(2) {
     filter: blur(10px);
 }
-.header-text a span{
+.header-text span{
     position: absolute;
     top: 0;
     left: 0;
@@ -173,19 +176,63 @@ a i:nth-child(2)
     overflow: hidden;
 }
 
-a span::before
-{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255,255,255,0.075);
-    transform: skew(25deg);
+
+.button{
+  position:relative;
+  display:inline-block;
+  margin:20px;
+  
 }
 
+.button a{
+  color:white;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight:bold;
+  font-size:20px;
+  text-align: center;
+  text-decoration:none;
+  background-color:#ff7429;
+  display:block;
+  position:relative;
+  
+  padding:20px 40px;
 
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  text-shadow: 0px 1px 0px #000;
+  filter: dropshadow(color=#000, offx=0px, offy=1px);
+
+  -webkit-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
+  -moz-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
+  box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
+
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
+.button a:active{
+  top:10px;
+  background-color:#ff7429;
+
+  -webkit-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
+  -moz-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3pxpx 0 #915100;
+  box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
+}
+
+.button:after{
+  content:"";
+  height:100%;
+  width:100%;
+  padding:4px;
+  position: absolute;
+  bottom:-15px;
+  left:-4px;
+  z-index:-1;
+  background-color:#2B1800;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
 
 .section {
     width: 100%;
@@ -652,4 +699,3 @@ ul {
     }
 
 }
-
